--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 anyhow = "1"
 indexmap = "2"
 log = "0.4"
-once_cell = "1"
+once_cell = "1.21.3"
 parking_lot = "0.12"
 rust-ini = "0.21"
 simple-logging = "2"
@@ -16,23 +16,23 @@ xml = "1.2.0"
 [dependencies.windows]
 version = "0.62"
 features = [
-    "Win32_Foundation",
-    "Win32_UI_WindowsAndMessaging",
-    "Win32_UI_Input_KeyboardAndMouse",
-    "Win32_UI_Shell",
-    "Win32_UI_Controls",
-    "Win32_UI_Accessibility",
-    "Win32_Graphics_Dwm",
-    "Win32_Graphics_Gdi",
-    "Win32_Graphics_GdiPlus",
-    "Win32_Security",
-    "Win32_Security_Authorization",
-    "Win32_System_LibraryLoader",
-    "Win32_System_Registry",
-    "Win32_System_SystemInformation",
-    "Win32_System_Threading",
-    "Win32_Storage_FileSystem",
-    "Wdk_System_SystemServices",
+  "Win32_Foundation",
+  "Win32_UI_WindowsAndMessaging",
+  "Win32_UI_Input_KeyboardAndMouse",
+  "Win32_UI_Shell",
+  "Win32_UI_Controls",
+  "Win32_UI_Accessibility",
+  "Win32_Graphics_Dwm",
+  "Win32_Graphics_Gdi",
+  "Win32_Graphics_GdiPlus",
+  "Win32_Security",
+  "Win32_Security_Authorization",
+  "Win32_System_LibraryLoader",
+  "Win32_System_Registry",
+  "Win32_System_SystemInformation",
+  "Win32_System_Threading",
+  "Win32_Storage_FileSystem",
+  "Wdk_System_SystemServices",
 ]
 
 [build-dependencies]
@@ -44,6 +44,4 @@ strip = true
 opt-level = "z"
 
 [workspace]
-members = [
-    "tools/inspect-windows"
-]
+members = ["tools/inspect-windows"]
